welcome.lessons.welcome.loopfor.LoopStairs.scala.code
avance()
avance()
avance()
for (compteur <- 1 to 8) {
  gauche()
  avance()
  droite()
  avance()
  baisseBrosse()
  leveBrosse()
}
poseBrosse()
avance()
avance()
avance()
